Fixed collapsed navbar, fixed cover bottom not aligning to bottom of viewport, and other minor updates.

--- a/Matthew_Shelbourn_Portfolio_2.css
+++ b/Matthew_Shelbourn_Portfolio_2.css
@@ -53,6 +53,13 @@ hr {
 	text-align: center;
 }
 
+.cover-bottom-align {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
 #cover-bottom {
 	background-color: rgba(255, 255, 255, 0.4);
 }
@@ -78,7 +85,7 @@ h1 {
 	size: cover;
 }
 
-#h1-body {
+/#h1-body {
 	font-size:3vw;
 	text-transform: uppercase;
 }
@@ -91,14 +98,18 @@ h2 {
 	font-size:2.3vw;
 }
 
+.navbar {
+  text-transform: uppercase;
+}
+
 .navbar-right {
 	text-transform: uppercase;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 1.5vw;
+	font-size: 1.5vh;
 }
 
 .navbar-left {
 	text-transform: uppercase;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 1.5vw;
+	font-size: 1.5vh;
 }
